--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -236,6 +236,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
+allow 18.213.60.66;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -507,6 +508,7 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
+allow 185.241.208.212;
 allow 185.241.208.232;
 allow 185.241.208.236;
 allow 185.241.208.243;
@@ -635,6 +637,7 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.178;
 allow 193.218.118.181;
+allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
@@ -1060,6 +1063,7 @@ allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
+allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c506::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1394,6 +1398,7 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
+allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1417,7 +1422,6 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
-allow 3.228.192.249;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1513,8 +1517,6 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 50.116.60.12;
-allow 50.3.182.133;
-allow 50.3.182.156;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
