--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -236,6 +236,7 @@ deny 179.43.182.232;
 deny 179.43.182.58;
 deny 179.48.251.188;
 deny 180.150.226.99;
+deny 18.213.60.66;
 deny 184.105.48.40;
 deny 185.100.85.132;
 deny 185.100.85.22;
@@ -507,6 +508,7 @@ deny 185.241.208.196;
 deny 185.241.208.202;
 deny 185.241.208.204;
 deny 185.241.208.206;
+deny 185.241.208.212;
 deny 185.241.208.232;
 deny 185.241.208.236;
 deny 185.241.208.243;
@@ -635,6 +637,7 @@ deny 193.189.100.206;
 deny 193.218.118.133;
 deny 193.218.118.178;
 deny 193.218.118.181;
+deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.233.133.109;
@@ -1060,6 +1063,7 @@ deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
+deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c506::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1394,6 +1398,7 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
+deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1417,7 +1422,6 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
-deny 3.228.192.249;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1513,8 +1517,6 @@ deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.38.255.27;
 deny 50.116.60.12;
-deny 50.3.182.133;
-deny 50.3.182.156;
 deny 51.15.249.160;
 deny 51.15.59.15;
 deny 51.158.115.62;
