--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -236,7 +236,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.213.60.66;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -667,6 +666,7 @@ allow 195.234.63.128;
 allow 195.26.247.0;
 allow 195.80.151.242;
 allow 195.88.74.206;
+allow 198.167.206.147;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -904,6 +904,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -929,6 +930,7 @@ allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::3d;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1075,6 +1077,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:6f8:2020:206:b::147;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
@@ -1435,6 +1438,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 3.91.111.158;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
