--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -236,7 +236,6 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.213.60.66;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -667,6 +666,7 @@ set_real_ip_from 195.234.63.128;
 set_real_ip_from 195.26.247.0;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
+set_real_ip_from 198.167.206.147;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -904,6 +904,7 @@ set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
@@ -929,6 +930,7 @@ set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
+set_real_ip_from 2602:f9f3:0:2::3d;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
@@ -1075,6 +1077,7 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:6f8:2020:206:b::147;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
@@ -1435,6 +1438,7 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 3.91.111.158;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
