--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -236,7 +236,6 @@ deny 179.43.182.232;
 deny 179.43.182.58;
 deny 179.48.251.188;
 deny 180.150.226.99;
-deny 18.210.59.66;
 deny 184.105.48.40;
 deny 185.100.85.132;
 deny 185.100.85.22;
@@ -282,6 +281,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -903,7 +903,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.94.211.25;
@@ -927,7 +926,6 @@ deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1164,6 +1162,7 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -1438,6 +1437,7 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 44.219.123.60;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1628,6 +1628,8 @@ deny 81.16.33.42;
 deny 81.17.28.95;
 deny 82.118.242.158;
 deny 82.118.242.36;
+deny 82.153.138.119;
+deny 82.153.138.182;
 deny 82.221.131.5;
 deny 82.221.131.71;
 deny 82.221.139.190;
@@ -1640,6 +1642,7 @@ deny 84.19.182.20;
 deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.247.165.51;
+deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
