--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -99,6 +99,7 @@ deny 107.189.8.238;
 deny 107.189.8.5;
 deny 107.189.8.56;
 deny 107.189.8.65;
+deny 107.21.45.84;
 deny 108.181.124.143;
 deny 108.181.27.205;
 deny 108.181.69.243;
@@ -903,6 +904,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.94.211.25;
@@ -926,6 +928,7 @@ deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1437,7 +1440,6 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
-deny 44.219.123.60;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
