--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -120,6 +120,7 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
+deny 118.163.74.160;
 deny 121.78.28.175;
 deny 123.253.35.32;
 deny 125.212.241.131;
@@ -812,6 +813,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -1164,7 +1166,6 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -1427,6 +1428,7 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
+deny 34.199.82.88;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1544,8 +1546,8 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.1.0.222;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1643,7 +1645,6 @@ deny 84.19.182.20;
 deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.247.165.51;
-deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
