--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -362,6 +362,7 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -573,8 +574,6 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0e:6a80:3:178::;
-allow 2a0e:6a80:3:23::;
 allow 2a0e:6a80:3:e5::;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
