--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.146.8;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -191,6 +192,7 @@ allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.232.164.52;
 allow 172.234.33.174;
+allow 172.235.36.50;
 allow 172.81.131.110;
 allow 172.81.131.111;
 allow 172.81.131.139;
@@ -289,6 +291,7 @@ allow 185.181.61.142;
 allow 185.181.61.18;
 allow 185.183.157.214;
 allow 185.183.159.40;
+allow 185.191.204.254;
 allow 185.193.158.134;
 allow 185.193.52.180;
 allow 185.193.66.127;
@@ -1070,6 +1073,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e03::f03c:94ff:fe7d:8250;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1518,6 +1522,7 @@ allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
+allow 46.195.209.33;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1570,7 +1575,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.158.148.199;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
